--- a/index.html
+++ b/index.html
@@ -94,5 +94,6 @@
   <body>
     <div class="scanline"></div>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
